# rm-v03

./: Makefile  mermaid-diagrams.md
apps/api/: .gitignore  CLAUDE.md  Makefile  REMITTANCE_IMPLEMENTATION.md  TESTING.md  lint-issues.md  matching_verification.py  package-lock.json  package.json  phase_2_xero_sync_prd.md  pyproject.toml  questions.md  remittance-processing-prd.md  seed.py  temp_permissions.md  test-remittance-simple.sh  test-remittance-workflow.sh  test-user  unapprove-remittance.sh
apps/api/.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _random.data.json  _random.meta.json  (+186 more)
apps/api/prisma/: schema.prisma  seed.py  seed.ts
apps/api/src/: main.py
apps/api/tests/: conftest.py
apps/api/workflow-documentation/: PACKAGE-OVERVIEW.md  QUICK-START.md  README.md
supabase/: config.toml
(+1307 files in other folders)
